--- a/website/templates/create_post.html
+++ b/website/templates/create_post.html
@@ -1,3 +1,12 @@
 {% extends "base.html" %}
 {% block title %}home{% endblock %}
-{% block content %}{% endblock %}
+{% block content %}
+<h1 align="centre">Make A Post</h1>
+<form method="POST">
+    <textarea name="text" id="text" class="form-control"></textarea>
+    <br/>
+    <div align="centre">
+        <button type="submit" class="btn btn-lg btn-primary">Post</button>
+    </div>
+</form>
+{% endblock %}
