--- a/website/templates/create_post.html
+++ b/website/templates/create_post.html
@@ -5,8 +5,14 @@
 <form method="POST">
     <textarea name="text" id="text" class="form-control"></textarea>
     <br/>
-    <div align="centre">
+    <div align="center">
         <button type="submit" class="btn btn-lg btn-primary">Post</button>
     </div>
 </form>
+<br />
+<div align="center">
+    <a href="/home">
+        <button type="button" class="btn btn-secondary btn-lg">Back</button>
+    </a>
+</div>
 {% endblock %}
