--- a/website/templates/posts.html
+++ b/website/templates/posts.html
@@ -1,3 +1,10 @@
-{% extends "base.html" %}
-{% block title %}home{% endblock %}
-{% block content %}{% endblock %}
+{% extends "posts_div.html" %}
+{% block title %}{{username}}'s Posts{% endblock %}
+{% block header %} {{username}}'s posts {% endblock %}
+{% block footer %}
+<div align="center">
+    <a href="/home">
+        <button type="button" class="btn btn-secondary btn-lg">Back</button>
+    </a>
+</div>
+{% endblock %}
