--- a/website/templates/posts_div.html
+++ b/website/templates/posts_div.html
@@ -6,13 +6,13 @@
     {% for post in posts %}
      <div class="card border-dark">
         <div class=" card-header d-flex justify-content-between align-items-center">
-         <a href="/posts/{{post.user.username}}">{{post.user.username}}</a>
+         <a href="/posts/{{ post.user.username }}">{{post.user.username}}</a>
          {% if user.id == post.author %}
          <div class="btn-group">
              <button type="button" class= "btn btn-sm btn-primary dropdown-toggle" data-bs-toggle="dropdown"></button>
              <ul class = "dropdown-menu">
                  <li>
-                     <a href="/delete-post/{{post.id}}" class="dropdown-item">Delete</a>
+                     <a href="/delete-post/{{ post.id }}" class="dropdown-item">Delete</a>
                  </li>
             </ul>
          </div>
@@ -20,8 +20,42 @@
         </div>
         <div class="card-body">
          <div class="card-text">{{post.text}}</div>
+         <br />
+        <div class="collaplse" id="comments-expaded-{{ post.id }}">
+            <div class="card">
+                <div class="card-body" id="comments-expanded-{{ post.id }}">
+                    {% for comments in post.comments %}
+                    <div class="d-flex justify-content-between align-items-center">
+                        <div>
+                            <a href="/post/{{ comment.user.username }}">{{ comment.user.username }}</a>
+                            {{ comment.text }}
+                        </div>
+                        <div>
+                            <small class="text-muted">{{ comment.date_created }}</small>
+                        </div>
+                    </div>
+                    {% endfor %}
+                </div>
+            </div>
         </div>
-        <div class="card-footer text-muted">{{post.date_created}}</div>
+        <p class="card-text">
+            {% if post.comments|length >0 %}
+                <a data-bs-toggle="collapse" href="#comments-{{post.id}}" role="button">
+                 <button>View {{post.comments|lenght}} Comments</button>
+                </a>
+            {% else %}
+                <small class="text-muted">No Comments</small>
+            {% endif %}
+        </p>
+         <form class="input-group mb-3" method='POST' action="/create-comment/{{ post.id }}">
+             <input type="text" 
+                    id="text" 
+                    class="form-control" 
+                    placeholder="Comment something!"/>
+             <button type="submit" class="btn btn-primary">Comment</button>
+         </form>
+        </div>
+        <div class="card-footer text-muted">{{ post.date_created }}</div>
      </div>
      <br/>
      {% endfor %}
