--- a/website/templates/posts_div.html
+++ b/website/templates/posts_div.html
@@ -9,7 +9,7 @@
          <a href="/posts/{{ post.user.username }}">{{post.user.username}}</a>
          {% if user.id == post.author %}
          <div class="btn-group">
-             <button type="button" class= "btn btn-sm btn-primary dropdown-toggle" data-bs-toggle="dropdown"></button>
+             <button type="button" class= "btn btn-sm btn-primary dropdown-toggle" data-toggle="dropdown"></button>
              <ul class = "dropdown-menu">
                  <li>
                      <a href="/delete-post/{{ post.id }}" class="dropdown-item">Delete</a>
@@ -24,7 +24,7 @@
         <div class="collaplse" id="comments-expaded-{{ post.id }}">
             <div class="card">
                 <div class="card-body" id="comments-expanded-{{ post.id }}">
-                    {% for comments in post.comments %}
+                     {% for comments in post.comments %}
                     <div class="d-flex justify-content-between align-items-center">
                         <div>
                             <a href="/post/{{ comment.user.username }}">{{ comment.user.username }}</a>
@@ -32,6 +32,16 @@
                         </div>
                         <div>
                             <small class="text-muted">{{ comment.date_created }}</small>
+                            {% if user.id ==comment.author or user.id == post.author %}
+                            <div class="btn-group">
+                                <button type="button" class= "btn btn-sm btn-primary dropdown-toggle" data-toggle="dropdown"></button>
+                                <ul class = "dropdown-menu">
+                                    <li>
+                                        <a href="/delete-comment/{{ comment.id }}" class="dropdown-item">Delete</a>
+                                    </li>
+                               </ul>
+                            </div>
+                            {% endif %}
                         </div>
                     </div>
                     {% endfor %}
@@ -40,8 +50,8 @@
         </div>
         <p class="card-text">
             {% if post.comments|length >0 %}
-                <a data-bs-toggle="collapse" href="#comments-{{post.id}}" role="button">
-                 <button>View {{post.comments|lenght}} Comments</button>
+                <a data-toggle="collapse" href="#comments-{{post.id}}" role="button">
+                 <small>View {{post.comments|length}} Comments</small>
                 </a>
             {% else %}
                 <small class="text-muted">No Comments</small>
