--- a/website/templates/base.html
+++ b/website/templates/base.html
@@ -9,6 +9,7 @@
     rel="stylesheet" 
     integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" 
     crossorigin="anonymous"/>
+    <script src="https://kit.fontawesome.com/2102fdaba0.js" crossorigin="anonymous"></script>
     <title>{% block title %}{% endblock %}</title>
 </head>
 <body>
