--- a/website/templates/posts_div.html
+++ b/website/templates/posts_div.html
@@ -6,20 +6,26 @@
     {% for post in posts %}
      <div class="card border-dark">
         <div class=" card-header d-flex justify-content-between align-items-center">
-         <a href="/posts/{{ post.user.username }}">{{post.user.username}}</a>
-         {% if user.id == post.author %}
-         <div class="btn-group">
-             <button type="button" class= "btn btn-sm btn-primary dropdown-toggle" data-toggle="dropdown"></button>
-             <ul class = "dropdown-menu">
-                 <li>
-                     <a href="/delete-post/{{ post.id }}" class="dropdown-item">Delete</a>
-                 </li>
-            </ul>
-         </div>
-         {% endif %}
+            <a href="/posts/{{ post.user.username }}">{{post.user.username}}</a>
+            <div>
+                {{post.likes|length}}
+                <i class="fa-regular fa-heart"></i>
+                {% if user.id == post.author %}
+                <div class="btn-group">
+                    <button type="button" class= "btn btn-sm btn-primary dropdown-toggle" data-toggle="dropdown"></button>
+                        <ul class = "dropdown-menu">
+                            <li>
+                                 <a href="/delete-post/{{ post.id }}" class="dropdown-item">Delete</a>
+                            </li>
+                     </ul>
+                 </div>
+                 {% endif %}
+            </div>
         </div>
         <div class="card-body">
-         <div class="card-text">{{post.text}}</div>
+         <div class="card-text">
+             {{post.text}}
+         </div>
          <br />
         <div class="collaplse" id="comments-expaded-{{ post.id }}">
             <div class="card">
